--- a/RtfWriter/RtfWriter.csproj
+++ b/RtfWriter/RtfWriter.csproj
@@ -1,9 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Target Name="Pack"></Target>  
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
+    <Version>1.0.0</PackageVersion>
+    <RepositoryUrl>https://github.com/Lansweeper/DotNetRtfWriter</RepositoryUrl>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{591BCEB5-6B6F-4368-BE6C-F89F668F7DCB}</ProjectGuid>
     <OutputType>Library</OutputType>
