--- a/RtfWriter/RtfWriter.csproj
+++ b/RtfWriter/RtfWriter.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
-    <Version>1.0.0</PackageVersion>
+    <Version>1.0.0</Version>
     <RepositoryUrl>https://github.com/Lansweeper/DotNetRtfWriter</RepositoryUrl>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{591BCEB5-6B6F-4368-BE6C-F89F668F7DCB}</ProjectGuid>
