--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,14 +65,13 @@ jobs:
             $cn.Project.PropertyGroup.Version="$env:package_version"
             $cn.Save($file.FullName)
             type ./<< pipeline.parameters.csproj-file >>
-      
       - run:
           name: Pack the package
           command: dotnet pack << pipeline.parameters.csproj-file >> --configuration Release
       - run:
           name: Publish the package
           command: |
-              dotnet nuget push << pipeline.parameters.output-file >> --source "github" --api-key $env:GITHUB_TOKEN
+              dotnet nuget push << pipeline.parameters.nuget-output-file >> --source "github" --api-key $env:GITHUB_TOKEN
 
 workflows:
   version: 2
