--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ parameters:
   csproj-file:
     type: string
     default: "RtfWriter/RtfWriter.csproj"
-  output-file:
+  nuget-output-file:
     type: string
     default: "RtfWriter/bin/Release/RtfWriter.1.0.0.nupkg"
 
