--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,18 +64,12 @@ jobs:
             $cn.Project.PropertyGroup.Version="$env:package_version"
             $cn.Save($file.FullName)
             type ./<< pipeline.parameters.csproj-file >>
+            nuget pack RtfWriter/Lansweeper.RtfWriter.nuspec -OutputDirectory build\packages -Version $env:package_version -Properties "Configuration=Release TargetFrameworkVersion=netstandard2.0;" -IncludeReferencedProjects
 
-      - run: 
-          name: Attempt to pack
-          command: nuget pack RtfWriter/Lansweeper.RtfWriter.nuspec -OutputDirectory build\packages -Version 1.0.0 -Properties "Configuration=Release TargetFrameworkVersion=netstandard2.0;" -IncludeReferencedProjects
-
-#      - run:
-#          name: Pack the package
-#          command: dotnet pack << pipeline.parameters.csproj-file >> --configuration Release
-#      - run:
-#          name: Publish the package
-#          command: |
-#              dotnet nuget push << pipeline.parameters.nuget-output-file >> --source "github" --api-key $env:GITHUB_TOKEN
+      - run:
+          name: Publish the package
+          command: |
+              dotnet nuget push << pipeline.parameters.nuget-output-file >> --source "github" --api-key $env:GITHUB_TOKEN
 
 workflows:
   version: 2
