--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ jobs:
             $env:package_version = "8.0.3"
             $file = Get-Item << pipeline.parameters.csproj-file >>
             [xml]$cn = Get-Content $file
-            $cn.Project.PropertyGroup.Version="$env:package_version"
+            $cn.Project.PropertyGroup[0].Version="$env:package_version"
             $cn.Save($file.FullName)
             type ./<< pipeline.parameters.csproj-file >>
             nuget pack RtfWriter/Lansweeper.RtfWriter.nuspec -OutputDirectory RtfWriter/bin/Release/ -Version $env:package_version -Properties "Configuration=Release TargetFrameworkVersion=netstandard2.0;" -IncludeReferencedProjects
